2016-05-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.0.2

	* R/rmsfact.R (.read.rms): Skip lines starting with '##'

	* inst/rmsfact/rmsfact.txt: Replaced / with ' as delimiter

	* inst/NEWS.Rd: Added

2016-05-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: First CRAN upload of finalised version 0.0.1

	* R/rmsfact.R: Added @seealso and @examples; the print method now
	uses strwrap

	* README.md: Expanded
	* .travis.yml: Added

	* inst/rmsfact/rmsfact.txt: Added copyright notice and link to source

2016-05-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: First version
	* NAMESPACE: Ditto
	* inst/rmsfact/rmsfact.txt: Ditto
	* R/rmsfact.R: Ditto
	* man/rmsfact.Rd: Ditoo