@@ -1,8 +1,8 @@
 Package: rmsfact
 Type: Package
 Title: Amazing Random Facts About the World's Greatest Hacker
-Version: 0.0.2
-Date: 2016-05-15
+Version: 0.0.2.1
+Date: 2016-08-04
 Author: Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: Display a randomly selected quote about Richard M. Stallman
