@@ -5,11 +5,14 @@
 \alias{rmsfact}
 \title{Display a Random Fact about Richard M. Stallman}
 \usage{
-rmsfact()
+rmsfact(ind)
 
 \method{print}{rmsfact}(x, width = NULL, ...)
 }
 \arguments{
+\item{ind}{Optional index of a quote; if missing a random value is
+sampled}
+
 \item{x}{Default object for \code{print} method}
 
 \item{width}{Optional column width parameter}
