@@ -1,6 +1,15 @@
 \name{NEWS}
-\title{News for Package \pkg{RPushbullet}}
+\title{News for Package \pkg{rmsfact}}
 \newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
+
+\section{Changes in version 0.0.3 (unreleased)}{
+  \itemize{
+    \item The encoding of the data file is now set when reading making
+    sure even Windows can display UTF-8 characters.
+    \item A new (optional) argument \sQuote{ind} allows retrieval by
+    index similar to what \cpkg{fortunes} does.
+  }
+}
 
 \section{Changes in version 0.0.2 (2015-05-16)}{
   \itemize{
